--- a/src/index.html
+++ b/src/index.html
@@ -6,33 +6,35 @@
   </head>
   <body>
 
-    <form class="filters" autocomplete="off">
-      <%
-        // set up tagging
-        var years = new Set();
-        var tags = new Set();
-        shelf.forEach(function(item) {
-          years.add(item.year);
-          item.tags.split(/\|\s/).forEach(t => tags.add(t.trim()));
-        });
-      %>
+    <main class="concierge">
+      <form class="filters" autocomplete="off">
+        <%
+          // set up tagging
+          var years = new Set();
+          var tags = new Set();
+          shelf.forEach(function(item) {
+            years.add(item.year);
+            item.tags.split(/\|\s/).forEach(t => tags.add(t.trim()));
+          });
+        %>
 
-      <fieldset class="years">
-        <% Array.from(years).forEach(function(y, i) { %>
-        <input type="checkbox" id="year-<%= y %>" value="<%= y %>" <%= !i ? "checked=checked" : "" %>>
-        <label for="year-<%= y %>"><%= y %></label>
-        <% }); %>
-      </fieldset>
+        <fieldset class="years">
+          <% Array.from(years).forEach(function(y, i) { %>
+          <input type="checkbox" id="year-<%= y %>" value="<%= y %>" <%= !i ? "checked=checked" : "" %>>
+          <label for="year-<%= y %>"><%= y %></label>
+          <% }); %>
+        </fieldset>
 
-      <fieldset class="tags">
-        <% for (var tag of tags) { %>
-        <input type="checkbox" id="tag-<%= tag %>" value="<%= tag %>">
-        <label for="tag-<%= tag %>"><%= tag %></label>
-        <% } %>
-      </fieldset>
-    </form>
+        <fieldset class="tags">
+          <% Array.from(tags).sort().forEach(function(tag) { %>
+          <input type="checkbox" id="tag-<%= tag %>" value="<%= tag %>">
+          <label for="tag-<%= tag %>"><%= tag %></label>
+          <% }); %>
+        </fieldset>
+      </form>
 
-    <div class="book-shelf"></div>
+      <div class="book-shelf"></div>
+    </main>
 
     <script src="app.js" async></script>
     <%= t.include("partials/_analytics.html") %>
