--- a/src/index.html
+++ b/src/index.html
@@ -33,12 +33,19 @@
         </fieldset>
       </form>
 
-      <div class="book-shelf">
-        
-        <% for (var i = 0; i < 100; i++) { %>
-        <div class="placeholder book-container"></div>
-        <% } %>
-
+      <div class="books">
+        <div class="view-controls">
+          <input type="radio" id="view-covers" name="view-controls" value="covers" checked="checked">
+          <label for="view-covers">Covers</label>
+          <input type="radio" id="view-list" name="view-controls" value="list">
+          <label for="view-list">List</label>
+        </div>
+        <div class="book-shelf">
+          <% for (var i = 0; i < 100; i++) { %>
+          <div class="placeholder book-container"></div>
+          <% } %>
+        </div>
+        <div class="book-list"></div>
       </div>
     </main>
 
