Create the bookService
This change splits the  shelved books into two files per year--an index and a full dump of details as a lookup object--which means we can load much, much faster for individual years.

--- a/src/js/_cover.html
+++ b/src/js/_cover.html
@@ -1,6 +1,6 @@
 <%
   var book = data.book;
-  var nativeLazy = data.nativeLazy;
+  var nativeLazy = "loading" in Image.prototype;
   var aspect = book.dimensions.height ? `padding-bottom: ${book.dimensions.height / book.dimensions.width * 100}%`: "";
 %>
 <div class="cover-container" style="<%= aspect %>">
