--- a/src/js/_book.html
+++ b/src/js/_book.html
@@ -1,6 +1,6 @@
-<h2 tabindex="-1"><%= data.title %></h2>
-<h3><%= data.author %></h3>
-<img src="./assets/covers/<%= data.isbn%>.jpg" class="cover">
+<img src="./assets/covers/<%= data.isbn%>.jpg" class="cover" alt="">
+<h2 class="title" tabindex="-1"><%= data.title %></h2>
+<h3 class="author"><%= data.author %></h3>
 <div class="text">
   <%= data.text %>
   <div class="reviewer">
