Switch years to a radio button
The load lag for multiple years is getting crazy, let's cut back a
little.

--- a/src/_filters.html
+++ b/src/_filters.html
@@ -1,7 +1,7 @@
 <form class="filters" autocomplete="off">
   <fieldset class="years">
     <% grunt.data.json.years.forEach(function(y) { %>
-    <input type="checkbox" id="year-<%= y.year %>" value="<%= y.year %>" <%= y.current ? "checked=checked" : "" %>>
+    <input type="radio" name="year-radio" id="year-<%= y.year %>" value="<%= y.year %>" <%= y.current ? "checked=checked" : "" %>>
     <label for="year-<%= y.year %>"><%= y.year %></label>
     <% }); %>
   </fieldset>
