Start mobile filtering work

--- a/src/_filters.html
+++ b/src/_filters.html
@@ -1,5 +1,5 @@
 <form class="filters" autocomplete="off">
-  <fieldset class="years">
+  <fieldset class="years" aria-label="Select a year">
     <% grunt.data.json.years.forEach(function(y) { %>
     <input type="radio" name="year-radio" id="year-<%= y.year %>" value="<%= y.year %>" <%= y.current ? "checked=checked" : "" %>>
     <label for="year-<%= y.year %>"><%= y.year %></label>
@@ -12,7 +12,7 @@
       item.tags.split(/\|\s/).forEach(t => tags.add(t.trim()));
     });
   %>
-  <fieldset class="tags">
+  <fieldset class="tags" aria-label="Select tags">
     <% Array.from(tags).sort().forEach(function(tag) { %>
     <input type="checkbox" id="tag-<%= tag %>" value="<%= tag %>">
     <label for="tag-<%= tag %>"><%= tag %></label>
