--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,9 @@
 
     <main class="concierge">
       <%= t.include("_filters.html") %>
+      <%= t.include("_fab.html") %>
 
-      <div class="catalog">
+      <section class="catalog" aria-label="Catalog">
 
         <div class="view-controls">
           <input type="radio" id="view-covers" name="view-controls" value="covers" checked="checked">
@@ -26,7 +27,7 @@
         
         <div class="catalog-list"></div>
         
-      </div>
+      </section>
 
       <div class="book-detail"></div>
     </main>
