Styled header/footer

--- a/src/_filters.html
+++ b/src/_filters.html
@@ -1,4 +1,5 @@
 <form class="filters" autocomplete="off">
+  <!-- <h3>Filters</h3> -->
   <fieldset class="years" aria-label="Select a year">
     <% grunt.data.json.years.forEach(function(y) { %>
     <input type="radio" name="year-radio" id="year-<%= y.year %>" value="<%= y.year %>" <%= y.current ? "checked=checked" : "" %>>
