Slight fix for scroll resumption

--- a/src/js/_list.html
+++ b/src/js/_list.html
@@ -5,7 +5,7 @@
       <div class="cover">
         <img
           alt=""
-          <%= "loading" in Image.prototype ? "src" : "data-src" %>="./assets/covers/<%= book.isbn %>.jpg"
+          src="./assets/covers/<%= book.isbn %>.jpg"
         >
       </div>
       <div class="metadata">
