Add "clear filters"

--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,10 @@
       <section class="catalog" aria-label="Catalog">
 
         <div class="section-header">
-          <h3>Selected books (<span class="book-count"></span>)</h3>
+          <h3>
+            Selected books (<span class="book-count"></span>)
+            <button class="clear-filters">Clear filters</button>
+          </h3>
 
           <div class="view-controls">
             <input type="radio" id="view-covers" name="view-controls" value="covers" checked="checked">
