Use arbitrary IDs instead of ISBN
Fixes #36

Too late for this year, I'd say, but next year we should be able to more easily handle e-books that don't have a print edition.

--- a/src/js/_list.html
+++ b/src/js/_list.html
@@ -1,7 +1,7 @@
 <ul>
   <% data.books.forEach(function(book) { %>
   <li data-isbn="<%= book.isbn %>">
-    <a href="#year=<%= book.year %>&book=<%= book.isbn %>">
+    <a href="#year=<%= book.year %>&book=<%= book.id %>">
       <div class="cover">
         <img
           alt=""
