--- a/src/js/_cover.html
+++ b/src/js/_cover.html
@@ -4,7 +4,7 @@
   var aspect = book.dimensions.height ? `padding-bottom: ${book.dimensions.height / book.dimensions.width * 100}%`: "";
 %>
 <a
-  href="#year=<%= book.year %>&book=<%= book.isbn %>"
+  href="#year=<%= book.year %>&book=<%= book.id %>"
   class="cover-link">
   <div class="cover-container" style="<%= aspect %>">
     <img 
