Remove catalog caching
Smarter shelving means less client-side processing for each year. Uses less state in the catalog stage, which ideally should make things a bit simpler to reason about for debugging.

--- a/src/_fab.html
+++ b/src/_fab.html
@@ -11,7 +11,7 @@
         // initialize tags
         var tags = new Set();
         shelf.forEach(function(item) {
-          item.tags.split(/\|\s/).forEach(t => tags.add(t.trim()));
+          item.tags.forEach(t => tags.add(t));
         });
         tags.forEach(function(tag) { %>
       <option value="<%= tag %>"><%= tag.toUpperCase() %></option>
