--- a/src/js/_book.html
+++ b/src/js/_book.html
@@ -28,6 +28,6 @@
   <a href="http://www.indiebound.org/book/<%= data.book.isbn13 %>?aff=NPR">Independent Booksellers</a>
   <% } %>
   <% if (data.book.goodreads) { %>
-  <a href="https://www.goodreads.com/book/show/<%= book.goodreads %>">Goodreads</a>
+  <a href="https://www.goodreads.com/book/show/<%= data.book.goodreads %>">Goodreads</a>
   <% } %>
 </div>
