Integrate chatter from sheet

--- a/src/_filters.html
+++ b/src/_filters.html
@@ -1,4 +1,8 @@
 <form class="filters" autocomplete="off">
+  <h3><%= json.copy.question %></h3>
+  <p class="chatter">
+    <%= json.copy.chatter %>
+  </p>
   <!-- <h3>Filters</h3> -->
   <fieldset class="years" aria-label="Select a year">
     <% grunt.data.json.years.forEach(function(y) { %>
