--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,14 @@
       <p class="pubdate">
         Published on <%= json.copy.updated %>
       </p>
+      
+      <!-- <h3>Filters</h3> -->
+      <fieldset class="years" aria-label="Select a year">
+        <% grunt.data.json.years.forEach(function(y) { %>
+        <input type="radio" name="year-radio" id="year-<%= y.year %>" value="<%= y.year %>" <%= y.current ? "checked=checked" : "" %>>
+        <label for="year-<%= y.year %>"><%= y.year %></label>
+        <% }); %>
+      </fieldset>
 
     </header>
 
