--- a/src/js/_book.html
+++ b/src/js/_book.html
@@ -10,7 +10,13 @@
 <div class="text">
   <%= data.book.text %>
   <div class="reviewer">
-    &mdash; <%= data.book.reviewer %>
+    &mdash;
+    <% if (data.reviewer.link) { %>
+    <a href="<%= data.reviewer.link %>"><%= data.book.reviewer %></a>,
+    <% } else { %>
+    <%= data.book.reviewer %>,
+    <% } %>
+    <%= data.reviewer.title || "NPR Staff" %>
   </div>
 </div>
 <ul class="links">
