Move Staff Picks up

--- a/src/_filters.html
+++ b/src/_filters.html
@@ -9,11 +9,14 @@
     shelf.forEach(function(item) {
       item.tags.filter(t => t.trim()).forEach(t => tags.add(t));
     });
+    var dashify = t => t.replace(/\s+/g, "-");
   %>
   <fieldset class="tags" aria-label="Select tags">
-    <% Array.from(tags).sort().forEach(function(tag) { %>
-    <input type="checkbox" id="tag-<%= tag %>" value="<%= tag %>">
-    <label for="tag-<%= tag %>"><%= tag %></label>
+    <input type="checkbox" id="tag-staff-picks" value="staff picks">
+    <label for="tag-staff-picks">Staff Picks</label>
+    <% Array.from(tags).sort().filter(t => t != "staff picks").forEach(function(tag) { %>
+    <input type="checkbox" id="tag-<%= dashify(tag) %>" value="<%= tag %>">
+    <label for="tag-<%= dashify(tag) %>"><%= tag %></label>
     <% }); %>
   </fieldset>
 </form>
