about page: relocate credits, style text. closes #47

--- a/src/about.html
+++ b/src/about.html
@@ -18,6 +18,10 @@
 
     <main class="about">
       <%= t.renderMarkdown(archieml.about.content) %>
+
+      <div class="credits">
+        <%= t.renderMarkdown(archieml.about.credits) %>
+      </div>
     </main>
 
     <footer>
