--- a/src/_fab.html
+++ b/src/_fab.html
@@ -1,11 +1,11 @@
 <form class="fab-form">
 
-  <button class="fab-button">
+  <button class="fab-button clear">
     Clear
   </button>
 
-  <div class="fab-button">
-    <label for="fab-tags">Tags</label>
+  <div class="fab-button tags">
+    <label for="fab-tags">Tags (<span class="fab-count">0</span>)</label>
     <select class="tags" id="fab-tags" multiple>
       <%
         // initialize tags
@@ -13,7 +13,7 @@
         shelf.forEach(function(item) {
           item.tags.forEach(t => tags.add(t));
         });
-        tags.forEach(function(tag) { %>
+        Array.from(tags).sort().forEach(function(tag) { %>
       <option value="<%= tag %>"><%= tag.toUpperCase() %></option>
         <%
         })
