Add back-to-books link
Fixes #46

--- a/src/about.html
+++ b/src/about.html
@@ -14,6 +14,10 @@
       <h1><%= json.copy.title %></h1>
       <h2><%= json.copy.subtitle %></h2>
 
+      <p class="about-link">
+        <a href="index.html">Back to books</a>
+      </p>
+
     </header>
 
     <main class="about">
