header: remove subtitle, restore bylines

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,9 @@
         books
       </a>
       <h1><%= json.copy.title %></h1>
-      <h2><%= json.copy.subtitle %></h2>
+      <p class="bylines">
+        <%= json.copy.bylines %>
+      </p>
 
       <p class="about-link">
         <a href="about.html">About</a>
