Add standard footer links
Fixes #45

--- a/src/index.html
+++ b/src/index.html
@@ -80,11 +80,7 @@
       <div class="book-detail"></div>
     </main>
 
-    <footer>
-      <a href="https://npr.org">
-        <img src="./assets/logo_lines.png" alt="NPR" class="logo">
-      </a>
-    </footer>
+    <%= t.include("partials/_footer.html", { content: t.include("_footer.html") }) %>
 
     <script>
 window.conciergeData = {
