Sort NPR.org links first

--- a/src/js/_book.html
+++ b/src/js/_book.html
@@ -28,8 +28,16 @@
   </div>
 </div>
 <ul class="links">
-  <% data.book.links.forEach(function(link) { %>
-  <li> <a href="<%= link.url %>"><%= link.text %></a>
+  <% data.book.links.sort(function(a, b) {
+    if (a.source == b.source) {
+      if (a.text < b.text) return -1;
+      if (b.text < a.text) return 1;
+      return 0;
+    }
+    if (a.source == "NPR.org") return -1;
+    if (b.source == "NPR.org") return 1;
+  }).forEach(function(link) { %>
+  <li> <b><%= link.source %> - </b> <a href="<%= link.url %>"><%= link.text %></a>
   <% }); %>
 </ul>
 <ul class="get-this-book">
