allows for both isbn and non-isbn covers

--- a/src/js/_cover.html
+++ b/src/js/_cover.html
@@ -8,7 +8,7 @@
   class="cover-link">
   <div class="cover-container" style="<%= aspect %>">
     <img 
-      <%= nativeLazy ? "src" : "data-src" %>="./assets/covers/<%= book.isbn %>.jpg"
+      <%= nativeLazy ? "src" : "data-src" %>="./assets/covers/<%= book.cover %>.jpg"
       class="cover"
       alt="<%= book.title %>"
       decoding="async"
