--- a/src/js/_book.html
+++ b/src/js/_book.html
@@ -19,19 +19,16 @@
   <%= data.book.text %>
   <div class="reviewer">
     &mdash;
-    <% if (data.reviewers) { %>
-    <% (data.reviewers).forEach(function(rev, i) { %>
-    <% if (rev.link) { %>
-    <a href="<%= rev.link %>"><%= rev.key %></a>,
-    <% } else { %>
-    <%= rev.key %>,
-    <% } %>
-    <%= poorMD(rev.title || "NPR Staff") %>
-    <% if(data.reviewers.length - 2 == i) {%> and
-    <% } else if(i < data.reviewers.length - 1) { %>,
-    <% } %>
+    <% if (data.reviewers) data.reviewers.forEach(function(rev, i) { 
+      var name = rev.link ? `<a href="${rev.link}">${rev.key}</a>` : rev.key;
+      var output = `${name}, ${poorMD(rev.title || "NPR Staff")}`;
+      if (i <= data.reviewers.length - 3) {
+        output += ", ";
+      } else if (i == data.reviewers.length - 2) {
+        output += " and ";
+      } %>
+      <%= output %>
     <% }); %>
-    <% } %>
   </div>
 </div>
 <ul class="links">
