--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,13 @@
   <body data-mode="covers">
 
     <header class="hero">
+      <svg class="texture">
+        <filter id="grain">
+          <feTurbulence numOctaves=2 baseFrequency="1" type="fractalNoise" />
+          <feColorMatrix type="saturate" values="0" />
+        </filter>
+        <rect x=0 y=0 width="100%" height="100%" filter="url(#grain)" opacity=".4" />
+      </svg>
       <a href="https://npr.org/books" class="books-home">
         <img src="./assets/logo-outline.svg" alt="NPR">
         books
