--- a/src/js/_list.html
+++ b/src/js/_list.html
@@ -5,7 +5,7 @@
       <div class="cover">
         <img
           alt=""
-          src="./assets/covers/<%= book.isbn %>.jpg"
+          src="./assets/covers/<%= book.cover %>.jpg"
         >
       </div>
       <div class="metadata">
